Fix Card, List and Comment colors not visible at some themes.
Thanks to Meeques, Go-rom and xet7 !

Fixes #4254,
fixes #4293

--- a/client/components/boards/boardColors.styl
+++ b/client/components/boards/boardColors.styl
@@ -186,9 +186,10 @@ setBoardColor(color)
   .list >.list-header, .swimlane-header
     color:rgba(255,255,255,.7)
 
-  /* minicards */
+  /* minicards
   .minicard
     background-color:rgba(255,255,255,.4)
+  */
 
   .minicard-wrapper.is-selected .minicard,
   .minicard:hover,
@@ -197,8 +198,10 @@ setBoardColor(color)
     background-color:rgba(255,255,255,.8) !important
     color:#000
 
+  /*
   .minicard, .minicard .badge
     color:#fff
+  */
 
   .minicard:hover .badge, .minicard-wrapper.is-selected .badge
     color:#000
@@ -214,6 +217,10 @@ setBoardColor(color)
   .sidebar-content h3, .sidebar-content h2, .sidebar-content
     color:rgba(255,255,255,.7) !important
 
+  .card-details .activities .activity .activity-desc .activity-comment
+    background-color: #cccccc
+    color: #222222
+
 .board-color-relax
   setBoardColor(#27AE61)
 
@@ -225,7 +232,7 @@ setBoardColor(color)
 
   .list-header
     background-color:#a7e366
-    border-bottom: 6px solid #a7e366
+    // border-bottom: 6px solid #a7e366
 
   .list-body
     background-color:#a7e366
@@ -541,8 +548,8 @@ setBoardClear(color1,color2)
     background-color:#dedede
 
   .list-header
-    background-color: #c9cfc3
-    border-bottom: 6px solid #c9cfc3
+    // background-color: #c9cfc3
+    // border-bottom: 6px solid #c9cfc3
 
   .swimlane .swimlane-header-wrap
     background-color: #c2c0ab
@@ -645,7 +652,7 @@ setBoardClear(color1,color2)
 
   .list-header
     background: none
-    border-bottom-width: 0px
+    // border-bottom-width: 0px
 
   .list-header .list-header-name
     font-family: Poppins
@@ -861,9 +868,9 @@ setBoardClear(color1,color2)
     background: #3b3b3b
 
   .list-header
-    background: #333333
+    // background: #333333
     padding: 10px
-    border-bottom: 0
+    // border-bottom: 0
 
   .list-header .viewer
     padding-left: 10px
@@ -912,8 +919,8 @@ setBoardClear(color1,color2)
     margin-bottom: 12px
 
   .minicard
-    background-color: #444444
-    color: #cccccc
+    /* background-color: #444444 */
+    /* color: #cccccc */
     border-radius: 2px
     font-size: 0.95em
     padding: 10px
